--- a/08-temporal-autocorrelation.Rmd
+++ b/08-temporal-autocorrelation.Rmd
@@ -36,14 +36,14 @@ ggplot(d, aes(temperature, -log(depth_mean_day))) +
 
 Why does it make sense to work with log depth?
 
-Let's fit a basic mixed-effects model predicting dive depth from surface temperature that allows the intercept and sloped to vary with each fish. We are going to center the temperature predictor first to reduce correlation between the intercepts and slopes.
+Let's fit a basic mixed-effects model predicting dive depth from surface temperature that allows the intercept and slope to vary with each fish. We are going to center the temperature predictor first to reduce correlation between the intercepts and slopes.
 
 ```{r, message=FALSE}
 d <- d %>% mutate(temperature_centered = temperature - mean(temperature))
 library(lme4)
 ```
 
-Try filling in the following model. We want a random intercept and random `temperature_centered` slope:
+Try filling in the following model. We want a random intercept and random `temperature_centered` slope grouped by `fish`:
 
 ```{r}
 m1 <- lmer(log(depth_mean_day) ~ temperature_centered +
@@ -131,7 +131,10 @@ m3 <- lme(log(depth_mean_day) ~ temperature_centered,
 Let's look at the residuals again:
 
 ```{r}
-plot(m3, resid(., type = "normalized") ~ fitted(.) | fish, abline = 0)
+plot(m3, resid(., type = "normalized") ~ lubridate::day(date) | fish, 
+  abline = 0, cex = 0.3)
+plot(m3, resid(., type = "normalized") ~ fitted(.) | fish, 
+  abline = 0, cex = 0.3)
 plot(ACF(m3, resType = "normalized"))
 ```
 
@@ -140,14 +143,17 @@ That looks much better. What if we hadn't specified `type = "normalized"`? Take 
 Let's try making the plots with the default residual type.
 
 ```{r}
-plot(m3, resid(.) ~ fitted(.) | fish, abline = 0)
+plot(m3, resid(.) ~ lubridate::day(date) | fish, abline = 0, cex = 0.3)
+plot(m3, resid(.) ~ fitted(.) | fish, abline = 0, cex = 0.3)
 ```
 
 The default, "response", does not incorporate the correlation structure. That's not very helpful when we are trying to tell if our correlation structure helped.
 
 # Other temporal correlation structures 
 
-The `corAR1()` correlation structure is just one of a number of temporal correlation structures we could have fit. It is the simplest, and probably most common to use. nmle allows us to also fit higher order auto regressive models in the residuals. For example, an AR 2 model would also estimate a regression parameter for residuals that are 2 time steps apart. This, and possible moving average coefficients, can be estimated with the `nlme::corARMA()`. Models with different correlation structures can be compared via AIC, and perhaps more importantly, by inspecting the residuals yourself with well-thought-out plots. Zuur et al. in "Mixed Effects Models and Extensions in Ecology with R" makes the point that fitting any temporal autocorrelation structure is usually far more important than getting the perfect structure. Start with AR 1 and try more complicated structures if that seems insufficient. 
+The `corAR1()` correlation structure is just one of a number of temporal correlation structures we could have fit. It is the simplest, and probably most common to use. nmle allows us to also fit higher order auto regressive models in the residuals. For example, an AR2 model would also estimate a regression parameter for residuals that are 2 time steps apart. This, and possible moving average coefficients, can be estimated with the `nlme::corARMA()`. 
+
+Models with different correlation structures can be compared via AIC, and perhaps more importantly, by inspecting the residuals yourself with well-thought-out plots. Zuur et al. in "Mixed Effects Models and Extensions in Ecology with R" makes the point that fitting any temporal autocorrelation structure is usually far more important than getting the perfect structure. Start with AR1 and try more complicated structures if that seems insufficient. 
 
 # Making a more useful plot of our predictions
 
